WIP to try to compile using Gluon Substrate
Currently having issues with:
java.lang.Exception: No native library is found for os.name=Mac and os.arch=x86_64. path=/org/sqlite/native/Mac/x86_64